feat: FullscreenModal 변경 (#890)
* feat: props 이름 변경(align -> direction)

* refactor: cls -> class

* feat: closeType button 제거

* feat: 제목 태그 변경

* feat: closeType props 제거하고 backward 아이콘을 기본으로 변경

* feat: direction 기본값 변경

* refactor: 헤더영역 구조 변경

* feat: 버튼 추가

* feat: 스크롤

* fix: buttonColor

* refactor: 변수명 변경

* fix: conflict

--- a/stories/components/message/modal/FullscreenModal.stories.mdx
+++ b/stories/components/message/modal/FullscreenModal.stories.mdx
@@ -1,8 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import FullscreenModal, {fullscreenDirection, fullscreenCloseType} from '@/components/components/message/modal/FullscreenModal';
-import Button from '@/components/components/general/button/Button';
+import FullscreenModal, { fullscreenDirection } from '@/components/components/message/modal/FullscreenModal';
+import Button, { buttonColors } from '@/components/components/general/button/Button';
 import SearchInput from '@/components/components/dataEntry/input/SearchInput';
 import Icon from '@/components/elements/core/icon/Icon';
+import Typography from "@/components/elements/core/typography/Typography";
 
 <Meta
     title="Message/Modal/FullscreenModal"
@@ -21,22 +22,36 @@ import Icon from '@/components/elements/core/icon/Icon';
                 options: fullscreenDirection,
             },
         },
-        closeType: {
-            description: "모달 interaction 시작방향",
-            control: {
-                type: "select",
-                options: fullscreenCloseType,
-            },
-        },
         title: {
             description: "모달 title",
             defaultValue: "title",
             control: { type: "text" },
         },
-        closeText: {
-            description: "closeType button타입에 들어가는 문구",
-            defaultValue: "접기",
-            control: { type: "text" },
+        loading: {
+            description: "버튼 로딩",
+            control: {
+                type: "boolean",
+            },
+        },
+        successMessage: {
+            description: "버튼명",
+            defaultValue: "확인",
+            control: {
+                type: "text",
+            },
+        },
+        showActionButton: {
+            description: "버튼 보이기",
+            control: {
+                type: "boolean",
+            },
+        },
+        buttonColor: {
+            description: "action 버튼 색상",
+            control: {
+                type: "select",
+                options: buttonColors,
+            },
         },
     }}
 />
@@ -50,11 +65,12 @@ export const Default = (args, { argTypes }) => ({
             <FullscreenModal
                 :show.sync="show"
                 :direction="direction"
-                :closeType="closeType"
+                :show-action-button="showActionButton"
+                :disabled="disabled"
+                :loading="loading"
+                :success-callback="successCallback"
+                :success-message="successMessage"
             >
-                <template v-slot:close>
-                    {{closeText}}
-                </template>
                 <template v-slot:title>
                   {{title}}
                 </template>
@@ -81,42 +97,6 @@ export const Default = (args, { argTypes }) => ({
 <ArgsTable story="Default" />
 
 ## Stories
-### Slot-Close
-<Canvas>
-    <Story name="Slot-Close" height="100px">
-        {{
-            data: () => ({
-                show: false,
-            }),
-            template: `
-                <div>
-                    <Button @click="show = true">Open</Button>
-                    <FullscreenModal
-                        :show.sync="show"
-                        direction="left"
-                        closeType="button"
-                    >
-                        <template v-slot:close>
-                            접기
-                        </template>
-                        <template v-slot:content>
-                            <div style="padding:16px">
-                                - Title없이 Close이벤트만 할 수 있는 경우의 fullscreenModal입니다.<br />
-                                - 일부 콘텐츠는 작성자 또는 답변자 요청으로 열람이 제한될 수 있습니다.<br />
-                                - 취소하면 결제에 사용된 할인 쿠폰은 소멸되며 재사용할 수 없습니다.<br />
-                                - 결제에 따른 개인정보는 '개인정보 처리방침'에 근거하여 관리됩니다.
-                            </div>
-                        </template>
-                    </FullscreenModal>
-                </div>
-            `,
-            components: {
-                FullscreenModal, Button
-            }
-        }}
-    </Story>
-</Canvas>
-
 ### Slot-Title
 <Canvas>
     <Story name="Slot-Title" height="100px">
@@ -129,12 +109,9 @@ export const Default = (args, { argTypes }) => ({
                     <Button @click="show = true">Open</Button>
                     <FullscreenModal
                         :show.sync="show"
+                        direction="left"
                         direction="right"
-                        closeType="icon"
                     >
-                        <template v-slot:close>
-                            접기
-                        </template>
                         <template v-slot:title>
                           Title이 있는 경우
                         </template>
@@ -169,18 +146,18 @@ export const Default = (args, { argTypes }) => ({
                     <Button @click="show = true">Open</Button>
                     <FullscreenModal
                         :show.sync="show"
+                        direction="left"
                         direction="top"
-                        closeType="none"
                     >
                         <template v-slot:title>
                             title
                         </template>
                         <template v-slot:action>
-                            <Button size="small" type="outline"  @click="show = false">초기화</Button>
+                            <Button size="small" type="outline"  @click="show = false">닫기</Button>
                         </template>
                         <template v-slot:content>
                             <div style="padding:16px">
-                                - Close 부분을 감추고, Action 이벤트를 추가 할 수 있는 fullscreenModal 입니다.<br />
+                                - Action 이벤트를 추가 할 수 있는 fullscreenModal 입니다.<br />
                                 - 일부 콘텐츠는 작성자 또는 답변자 요청으로 열람이 제한될 수 있습니다.<br />
                                 - 취소하면 결제에 사용된 할인 쿠폰은 소멸되며 재사용할 수 없습니다.<br />
                                 - 결제에 따른 개인정보는 '개인정보 처리방침'에 근거하여 관리됩니다.
@@ -212,7 +189,7 @@ export const Default = (args, { argTypes }) => ({
                     >
                         <template v-slot:content>
                             <div class="pa-16 flex">
-                                <div class="mr-8" @click="show = false" style="float:left; margin-top:4px">
+                                <div class="mr-8" @click="show = false" style="margin: 4px 0 0 4px; display: flex; align-items: center;">
                                     <Icon name="IconArrowLargeLine" :rotate="-90"></Icon>
                                 </div>
                                 <SearchInput
@@ -249,28 +226,44 @@ export const Default = (args, { argTypes }) => ({
                     <Button @click="show = true">Open</Button>
                     <FullscreenModal
                         :show.sync="show"
-                        direction="bottom"
-                        closeType="icon"
+                        direction="left"
+                        show-action-button
+                        button-color="light-primary"
+                        :success-callback="() => { show = false; }"
                     >
                         <template v-slot:title>
-                            title
+                            Title이 있는 경우
                         </template>
                         <template v-slot:action>
-                            <Button size="small" type="outline" >초기화</Button>
+                            <Button size="small" type="outline" @click="onClick">초기화</Button>
                         </template>
                         <template v-slot:content>
-                            <div style="padding:16px">
-                                - Close 부분을 감추고, Action 이벤트를 추가 할 수 있는 fullscreenModal 입니다.<br />
-                                - 일부 콘텐츠는 작성자 또는 답변자 요청으로 열람이 제한될 수 있습니다.<br />
-                                - 취소하면 결제에 사용된 할인 쿠폰은 소멸되며 재사용할 수 없습니다.<br />
-                                - 결제에 따른 개인정보는 '개인정보 처리방침'에 근거하여 관리됩니다.
-                            </div>
+                            <Typography type="display1" style="padding:16px">
+                                동해 물과 백두산이 마르고 닳도록<br />
+                                하느님이 보우하사 우리나라 만세<br />
+                                무궁화 삼천리 화려강산<br />
+                                대한 사람 대한으로 길이 보전하세<br />
+                                <br/>
+                                남산 위에 저 소나무 철갑을 두른 듯<br />
+                                바람 서리 불변함은 우리 기상일세<br />
+                                <br/>
+                                가을 하늘 공활한데 높고 구름 없이<br />
+                                밝은 달은 우리 가슴 일편단심일세<br />
+                                <br/>
+                                이 기상과 이 맘으로 충성을 다하여<br />
+                                괴로우나 즐거우나 나라 사랑하세
+                            </Typography>
                         </template>
                     </FullscreenModal>
                 </div>
             `,
+            methods: {
+                onClick() {
+                    alert('click!');
+                },
+            },
             components: {
-                FullscreenModal, Button
+                FullscreenModal, Button, Typography
             }
         }}
     </Story>
