--- a/stories/components/message/modal/FullscreenModal.stories.mdx
+++ b/stories/components/message/modal/FullscreenModal.stories.mdx
@@ -110,14 +110,13 @@ export const Default = (args, { argTypes }) => ({
                     <FullscreenModal
                         :show.sync="show"
                         direction="left"
-                        direction="right"
                     >
                         <template v-slot:title>
                           Title이 있는 경우
                         </template>
                         <template v-slot:content>
                             <div style="padding:16px">
-                                - Title과 Close이벤트를 추가한 fullscreenModal입니다.<br />
+                                - fullscreenModal입니다.<br />
                                 - 일부 콘텐츠는 작성자 또는 답변자 요청으로 열람이 제한될 수 있습니다.<br />
                                 - 취소하면 결제에 사용된 할인 쿠폰은 소멸되며 재사용할 수 없습니다.<br />
                                 - 결제에 따른 개인정보는 '개인정보 처리방침'에 근거하여 관리됩니다.
@@ -147,7 +146,6 @@ export const Default = (args, { argTypes }) => ({
                     <FullscreenModal
                         :show.sync="show"
                         direction="left"
-                        direction="top"
                     >
                         <template v-slot:title>
                             title
