feat: IconVodProductLargeLine 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -2,7 +2,7 @@ import { ArgsTable, Meta, Story, Props, Canvas } from '@storybook/addon-docs/blo
 import Icon, { IconNames } from '@/components/elements/core/icon/Icon';
 import { colorKeys } from '@/utils/constants/color';
 import IconWrapper from './IconWrapper';
-import EtcIcon from "@/components/elements/core/icon/EtcIcon";
+import EtcIcon from '@/components/elements/core/icon/EtcIcon';
 import Typography from '@/components/elements/core/typography/Typography';
 
 <Meta
@@ -241,6 +241,7 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconStarLargeLine" />
                           <IconWrapper component="Icon" name="IconStarLargeFill" />
                           <IconWrapper component="Icon" name="IconThreeDotLargeFill" />
+                          <IconWrapper component="Icon" name="IconVodProductLargeLine" />
                       </div>
                     </div>
                     <!--x-large-->
