feat: IconVodMediumLine 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -173,6 +173,7 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconUnblockMediumLine" />
                           <IconWrapper component="Icon" name="IconSirenMediumLine" />
                           <IconWrapper component="Icon" name="IconWritingMediumLine" />
+                          <IconWrapper component="Icon" name="IconVodMediumLine" />
                         </div>
                     </div>
                     <!--large-->
