feat: 아이콘 3개 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -288,6 +288,8 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconCheckRound2XLargeFill" />
                             <IconWrapper component="Icon" name="IconWriting2XLargeLine" />
                             <IconWrapper component="Icon" name="IconPhoto2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconSupport2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconPlus2XLargeLine" />
                         </div>
                     </div>
                     <!--4x-large-->
@@ -303,6 +305,7 @@ export const Default = (args, { argTypes }) => ({
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconStar4XLargeFill" />
+                            <IconWrapper component="Icon" name="IconStar4XLargeLine" />
                         </div>
                     </div>
                     <!--etc-->
