feat: 아이콘 2개 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -111,6 +111,8 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconEssayMediumLine" />
                           <IconWrapper component="Icon" name="IconInterviewMediumLine" />
                           <IconWrapper component="Icon" name="IconCommentMediumLine" />
+                          <IconWrapper component="Icon" name="IconResumeMediumLine" />
+                          <IconWrapper component="Icon" name="IconAnalyticsMediumLine" />
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
                           <IconWrapper component="Icon" name="IconArrowMediumLine" />
