--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -272,6 +272,10 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconBookmarkXLargeLine" />
                           <IconWrapper component="Icon" name="IconDownloadXLargeLine" />
                       </div>
+                      <div style="display: flex; flex-wrap: wrap;">
+                        <IconWrapper component="Icon" name="IconMuteXLargeLine" />
+                        <IconWrapper component="Icon" name="IconVolumeXLargeLine" />
+                      </div>
                     </div>
                     <!--2x-large-->
                     <div>
