--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -76,7 +76,6 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconPlusSmallLine"/>
                             <IconWrapper component="Icon" name="IconCloseSmallLine"/>
                             <IconWrapper component="Icon" name="IconSearchSmallLine"/>
-                            <IconWrapper component="Icon" name="IconWritingSmallLine"/>
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconCheckSmallLine"/>
@@ -99,6 +98,12 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconLikeSmallLine"/>
                             <IconWrapper component="Icon" name="IconLikeSmallFill"/>
                             <IconWrapper component="Icon" name="IconThreeDotSmallFill" />
+                            <IconWrapper component="Icon" name="IconWritingSmallLine"/>
+                        </div>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name="IconWritingSmallLine"/>
+                            <IconWrapper component="Icon" name="IconBookmarkSmallLine"/>
+                            <IconWrapper component="Icon" name="IconBookmarkSmallFill"/>
                         </div>
                     </div>
                     <!--medium-->
