--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -181,6 +181,7 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconUnblockMediumLine" />
                           <IconWrapper component="Icon" name="IconWritingMediumLine" />
                           <IconWrapper component="Icon" name="IconVodMediumLine" />
+                          <IconWrapper component="Icon" name="IconDateMediumLine" />
                         </div>
                     </div>
                     <!--large-->
