feat: add IconBag2XLargeLine

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -302,6 +302,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconPhoto2XLargeLine" />
                             <IconWrapper component="Icon" name="IconSupport2XLargeLine" />
                             <IconWrapper component="Icon" name="IconPlus2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconBag2XLargeLine" />
                         </div>
                     </div>
                     <!--4x-large-->
