Feature/add icon (#936)
* feat: add IconDateMediumLine

* feat: add IconBag2XLargeLine

* remove: story에서 conWritingSmallLine 중복 제거

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -98,7 +98,6 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconLikeSmallLine"/>
                             <IconWrapper component="Icon" name="IconLikeSmallFill"/>
                             <IconWrapper component="Icon" name="IconThreeDotSmallFill" />
-                            <IconWrapper component="Icon" name="IconWritingSmallLine"/>
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconWritingSmallLine"/>
@@ -181,6 +180,7 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconUnblockMediumLine" />
                           <IconWrapper component="Icon" name="IconWritingMediumLine" />
                           <IconWrapper component="Icon" name="IconVodMediumLine" />
+                          <IconWrapper component="Icon" name="IconDateMediumLine" />
                         </div>
                     </div>
                     <!--large-->
@@ -301,6 +301,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconPhoto2XLargeLine" />
                             <IconWrapper component="Icon" name="IconSupport2XLargeLine" />
                             <IconWrapper component="Icon" name="IconPlus2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconBag2XLargeLine" />
                         </div>
                     </div>
                     <!--4x-large-->
