--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -105,6 +105,11 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconBookmarkSmallLine"/>
                             <IconWrapper component="Icon" name="IconBookmarkSmallFill"/>
                         </div>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name="IconWritingSmallLine"/>
+                            <IconWrapper component="Icon" name="IconBookmarkSmallLine"/>
+                            <IconWrapper component="Icon" name="IconBookmarkSmallFill"/>
+                        </div>
                     </div>
                     <!--medium-->
                     <div>
@@ -181,6 +186,7 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconUnblockMediumLine" />
                           <IconWrapper component="Icon" name="IconWritingMediumLine" />
                           <IconWrapper component="Icon" name="IconVodMediumLine" />
+                          <IconWrapper component="Icon" name="IconDateMediumLine" />
                         </div>
                     </div>
                     <!--large-->
@@ -301,6 +307,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconPhoto2XLargeLine" />
                             <IconWrapper component="Icon" name="IconSupport2XLargeLine" />
                             <IconWrapper component="Icon" name="IconPlus2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconBag2XLargeLine" />
                         </div>
                     </div>
                     <!--4x-large-->
