hotfix: 아이콘 복구 (#935)
* chore: release v0.1.90 (#501)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.91 (#504)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.92 (#507)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.93 (#509)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.94 (#511)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.95 (#513)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.96 (#518)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.97 (#524)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.98 (#528)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.99 (#532)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.100 (#535)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* [remove] ios에서 input shadow가 들어가는 이슈 해결 (#536)

* Revert "[remove] ios에서 input shadow가 들어가는 이슈 해결 (#536)" (#537)

This reverts commit 447a7ce27f5ac3ba57b6106491a49eebd9035a4b.

* chore: release v0.1.101 (#539)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.102 (#542)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.103 (#546)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.104 (#549)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.105 (#551)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.106 (#556)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.107 (#564)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.108 (#567)

Co-authored-by: donghoon-song <thdehdgns@gmail.com>

* chore: release v0.1.109 (#568)

Co-authored-by: donghoon-song <thdehdg

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -98,6 +98,12 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconLikeSmallLine"/>
                             <IconWrapper component="Icon" name="IconLikeSmallFill"/>
                             <IconWrapper component="Icon" name="IconThreeDotSmallFill" />
+                            <IconWrapper component="Icon" name="IconWritingSmallLine"/>
+                        </div>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name="IconWritingSmallLine"/>
+                            <IconWrapper component="Icon" name="IconBookmarkSmallLine"/>
+                            <IconWrapper component="Icon" name="IconBookmarkSmallFill"/>
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name="IconWritingSmallLine"/>
