feat: loading icon 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -103,6 +103,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconWritingSmallLine"/>
                             <IconWrapper component="Icon" name="IconBookmarkSmallLine"/>
                             <IconWrapper component="Icon" name="IconBookmarkSmallFill"/>
+							<IconWrapper component='Icon' name="IconLoadingSmallFill" />
                         </div>
                     </div>
                     <!--medium-->
