--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -110,6 +110,12 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconBookmarkSmallLine"/>
                             <IconWrapper component="Icon" name="IconBookmarkSmallFill"/>
                         </div>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name="IconWritingSmallLine"/>
+                            <IconWrapper component="Icon" name="IconBookmarkSmallLine"/>
+                            <IconWrapper component="Icon" name="IconBookmarkSmallFill"/>
+							<IconWrapper component='Icon' name="IconLoadingSmallFill" />
+                        </div>
                     </div>
                     <!--medium-->
                     <div>
@@ -284,8 +290,8 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconDownloadXLargeLine" />
                       </div>
                       <div style="display: flex; flex-wrap: wrap;">
-                        <IconWrapper component="Icon" name="IconMuteXLargeLine" />
                         <IconWrapper component="Icon" name="IconVolumeXLargeLine" />
+                        <IconWrapper component="Icon" name="IconMuteXLargeLine" />
                       </div>
                     </div>
                     <!--2x-large-->
