fix: 정의되지 않은 변수 제거
-

--- a/stories/components/dataDisplay/content/UserInformation.stories.mdx
+++ b/stories/components/dataDisplay/content/UserInformation.stories.mdx
@@ -176,7 +176,7 @@ export const Basic = (args, { argTypes }) => ({
                   <Avatar type="profile" size="xsmall"/>
                 </template>
                 <template v-slot:name>
-                  <UserInformationName :type="type">
+                  <UserInformationName>
                     질문자
                   </UserInformationName>
                 </template>
@@ -187,7 +187,7 @@ export const Basic = (args, { argTypes }) => ({
                   <Avatar type="profile" size="small"/>
                 </template>
                 <template v-slot:name>
-                  <UserInformationName :type="type">
+                  <UserInformationName>
                     질문자
                   </UserInformationName>
                 </template>
@@ -198,7 +198,7 @@ export const Basic = (args, { argTypes }) => ({
                   <Avatar type="profile" size="medium"/>
                 </template>
                 <template v-slot:name>
-                  <UserInformationName :type="type">
+                  <UserInformationName>
                     질문자
                   </UserInformationName>
                 </template>
